<resources>
    <string name="app_name">Barbera</string>
    <string name="welcome">Welcome To BarberA</string>
    <string name="login">Login</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="reg">Register</string>
    <string name="sin_up">Sign up</string>
    <string name="alrdy">Already have account?</string>
    <string name="nearby">Search Salon</string>
    <string name="Service_Salon">Providers</string>
    <string name="Appoint">Appoint</string>
    <string name="Services">Services</string>
    <string name="open">Open drawer</string>
    <string name="close">close drawer</string>
    <string name="ahmed_nur_e_safa">Ahmed Nur E Safa</string>
    <string name="powered_by">Powered By</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="cart">Cart</string>
    <string name="about_us">About Us</string>
    <string name="my_number">01786061922</string>
    <string name="contact">Contact with the owner</string>
</resources>