<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout_id"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_id"
        android:layout_width="350sp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:backgroundTint="#F4FBFF"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:headerLayout="@layout/header"
        app:menu="@menu/header_item">
    </com.google.android.material.navigation.NavigationView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:gravity="center"
        android:foregroundGravity="center"
        tools:context=".homePage">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/toolbar_id"
            android:background="#EFCFF8"
            app:title="BarberA"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:menu="@menu/header_item"
            android:paddingBottom="6sp"
            app:titleTextColor="@color/black"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_marginTop="20sp"
            android:backgroundTint="#EFCFF8"
            android:background="@drawable/back_for_home">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="336dp"
                android:layout_height="104dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="BarberA"
                android:textColor="@color/black"
                android:textSize="90sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="97dp"
                android:layout_height="78dp"
                android:layout_marginBottom="23dp"
                android:src="@drawable/home_pic"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.316"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.115" />

            <ImageView
                android:layout_width="97dp"
                android:layout_height="78dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/seat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.837"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:columnCount="2"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/maps_id"
                android:layout_width="135sp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardBackgroundColor="#F5DCFB"
                app:cardCornerRadius="20sp"
                app:cardElevation="10sp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/map" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nearby"
                        android:textColor="#370245"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/provider_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="20sp"
                app:cardElevation="10sp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="6sp"
                        android:src="@drawable/provider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3sp"
                        android:text="@string/Service_Salon"
                        android:textColor="#370245"
                        android:textSize="20sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/appointid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="20sp"
                app:cardElevation="10sp"
                app:cardUseCompatPadding="true"
                >
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:src="@drawable/appoint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Appoint"
                        android:textColor="#370245"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/serviceid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                app:cardCornerRadius="20sp"
                app:cardElevation="10sp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10sp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/user_feed" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Feedbacks"
                        android:textAlignment="center"
                        android:textColor="#370245"
                        android:layout_marginTop="35sp"
                        android:textSize="20sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </GridLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.drawerlayout.widget.DrawerLayout>
